# tuiframework

./: README.md
tuiframework/cpp/: .gitignore  Makefile.am  README  bootstrap.sh  cleanup.sh  configure.ac  doxygen.cfg  lconfigure.sh
tuiframework/cpp/Windows/: .gitignore  tuiframework.sln
tuiframework/cpp/Windows/KinectServer/: KinectDeviceApp.cpp  KinectServer.vcproj  KinectServer.vcxproj  ReadMe.txt  SceneDrawer.cpp  SceneDrawer.h  SimpleFilter.cpp  SimpleFilter.h
tuiframework/cpp/Windows/MouseServer/: MouseServer.cpp  MouseServer.rc  MouseServer.vcproj  MouseServer.vcxproj  resource.h
tuiframework/cpp/Windows/SupercolliderDLL/: ExportedFunctions.cpp  ExportedFunctions.h  SoundManager.cpp  SoundManager.h  SupercolliderDLL.def  SupercolliderDLL.vcxproj  main.cpp
tuiframework/cpp/Windows/SupercolliderDLLTest/: SupercolliderDLLTest.sln
tuiframework/cpp/Windows/TUIBinTUIClient1/: ReadMe.txt  TUIBinTUIClient1.vcproj  TUIBinTUIClient1.vcxproj
tuiframework/cpp/Windows/TUIBinTUIClient2/: ReadMe.txt  TUIBinTUIClient2.vcproj  TUIBinTUIClient2.vcxproj
tuiframework/cpp/Windows/TUIBinTUIClient3/: ReadMe.txt  TUIBinTUIClient3.vcproj  TUIBinTUIClient3.vcxproj
tuiframework/cpp/Windows/TUIBinTUIMCClient/: TUIBinTUIMCClient.vcproj  TUIBinTUIMCClient.vcxproj
tuiframework/cpp/Windows/TUIBinTUIMouseClient/: ReadMe.txt  TUIBinTUIMouseClient.vcproj  TUIBinTUIMouseClient.vcxproj
tuiframework/cpp/Windows/TUIBinTUIServer1/: ReadMe.txt  TUIBinTUIServer1.vcproj  TUIBinTUIServer1.vcxproj
tuiframework/cpp/Windows/TUIBinTUIServer2/: ReadMe.txt  TUIBinTUIServer2.vcproj  TUIBinTUIServer2.vcxproj
tuiframework/cpp/Windows/TUIFrameworkClient/: ReadMe.txt  TUIFrameworkClient.vcproj  TUIFrameworkClient.vcxproj
tuiframework/cpp/Windows/TUIFrameworkCore/: ReadMe.txt  TUIFrameworkCore.vcproj  TUIFrameworkCore.vcxproj
tuiframework/cpp/Windows/TUIFrameworkServer/: ReadMe.txt  TUIFrameworkServer.vcproj  TUIFrameworkServer.vcxproj
tuiframework/cpp/Windows/TUIFrameworkXML/: ReadMe.txt  TUIFrameworkXML.vcproj  TUIFrameworkXML.vcxproj
tuiframework/cpp/Windows/TUILibDTrack/: ReadMe.txt  TUILibDTrack.vcproj  TUILibDTrack.vcxproj
tuiframework/cpp/Windows/TUILibDTrackDLL/: DTrackDevPluginWin32.cpp  ReadMe.txt  TUILibDTrackDLL.cpp  TUILibDTrackDLL.def  TUILibDTrackDLL.vcproj  TUILibDTrackDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibDummy/: ReadMe.txt  TUILibDummy.vcproj  TUILibDummy.vcxproj
tuiframework/cpp/Windows/TUILibDummyDLL/: DummyDevPluginWin32.cpp  ReadMe.txt  TUILibDummyDLL.cpp  TUILibDummyDLL.def  TUILibDummyDLL.vcproj  TUILibDummyDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibKinect/: ReadMe.txt  TUILibKinect.vcproj  TUILibKinect.vcxproj
tuiframework/cpp/Windows/TUILibKinectDLL/: KinectDevPluginWin32.cpp  ReadMe.txt  TUILibKinectDLL.cpp  TUILibKinectDLL.def  TUILibKinectDLL.vcproj  TUILibKinectDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibKinectTransf/: ReadMe.txt  TUILibKinectTransf.vcproj  TUILibKinectTransf.vcxproj
tuiframework/cpp/Windows/TUILibKinectTransfDLL/: KinectTransfPluginWin32.cpp  ReadMe.txt  TUILibKinectTransfDLL.cpp  TUILibKinectTransfDLL.def  TUILibKinectTransfDLL.vcproj  TUILibKinectTransfDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibM4Transf/: ReadMe.txt  TUILibM4Transf.vcproj  TUILibM4Transf.vcxproj
tuiframework/cpp/Windows/TUILibM4TransfDLL/: M4TransfPluginWin32.cpp  ReadMe.txt  TUILibM4TransfDLL.cpp  TUILibM4TransfDLL.def  TUILibM4TransfDLL.vcproj  TUILibM4TransfDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMatrix4Calibration/: ReadMe.txt  TUILibMatrix4Calibration.vcxproj
tuiframework/cpp/Windows/TUILibMatrix4CalibrationDLL/: Matrix4CalibrationPluginWin32.cpp  ReadMe.txt  TUILibMatrix4CalibrationDLL.cpp  TUILibMatrix4CalibrationDLL.def  TUILibMatrix4CalibrationDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMatrix4Depack/: ReadMe.txt  TUILibMatrix4Depack.vcproj
tuiframework/cpp/Windows/TUILibMatrix4DepackDLL/: Matrix4DepackPluginWin32.cpp  ReadMe.txt  TUILibMatrix4DepackDLL.cpp  TUILibMatrix4DepackDLL.def  TUILibMatrix4DepackDLL.vcproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMatrix4Op/: ReadMe.txt  TUILibMatrix4Op.vcproj  TUILibMatrix4Op.vcxproj
tuiframework/cpp/Windows/TUILibMatrix4OpDLL/: Matrix4OpPluginWin32.cpp  ReadMe.txt  TUILibMatrix4OpDLL.cpp  TUILibMatrix4OpDLL.def  TUILibMatrix4OpDLL.vcproj  TUILibMatrix4OpDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMotionCaptureStub/: ReadMe.txt  TUILibMotionCaptureStub.vcproj  TUILibMotionCaptureStub.vcxproj
tuiframework/cpp/Windows/TUILibMotionCaptureStubDLL/: MotionCaptureStubPluginWin32.cpp  ReadMe.txt  TUILibMotionCaptureStubDLL.cpp  TUILibMotionCaptureStubDLL.def  TUILibMotionCaptureStubDLL.vcproj  TUILibMotionCaptureStubDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMouse/: ReadMe.txt  TUILibMouse.vcproj  TUILibMouse.vcxproj
tuiframework/cpp/Windows/TUILibMouseDLL/: MousePluginWin32.cpp  ReadMe.txt  TUILibMouseDLL.cpp  TUILibMouseDLL.def  TUILibMouseDLL.vcproj  TUILibMouseDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibMouseDemux/: ReadMe.txt  TUILibMouseDemux.vcproj  TUILibMouseDemux.vcxproj
tuiframework/cpp/Windows/TUILibMouseDemuxDLL/: MouseDemuxPluginWin32.cpp  ReadMe.txt  TUILibMouseDemuxDLL.cpp  TUILibMouseDemuxDLL.def  TUILibMouseDemuxDLL.vcproj  TUILibMouseDemuxDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibPhidgets/: ReadMe.txt  TUILibPhidgets.vcproj  TUILibPhidgets.vcxproj
tuiframework/cpp/Windows/TUILibPhidgetsDLL/: PhidgetsDevPluginWin32.cpp  ReadMe.txt  TUILibPhidgetsDLL.cpp  TUILibPhidgetsDLL.def  TUILibPhidgetsDLL.vcproj  TUILibPhidgetsDLL.vcxproj  stdafx.cpp
tuiframework/cpp/Windows/TUILibSuperCollider/: ReadMe.txt  TUILibSuperCollider.vcxproj
tuiframework/cpp/Windows/TUILibSuperColliderDLL/: ReadMe.txt  SuperColliderPluginWin32.cpp  TUILibSuperColliderDLL.cpp  stdafx.cpp  (+2 more)
tuiframework/cpp/tuibins/: Makefile.am  Makefile.in
tuiframework/cpp/tuiframework/: Makefile.am  Makefile.in
tuiframework/cpp/tuilibs/: Makefile.am  Makefile.in  libCommonTUITypesPlugin.la
(+509 files in other folders)
